[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autobahn-system"
version = "0.1.0"
description = "Sistema Intelligente di Triage, RAG e Routing per il Customer Care Enterprise"
requires-python = ">=3.10"
authors = [
    { name = "Studente Impesud", email = "student@example.com" }
]
dependencies = [
    "openai>=1.14.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
package-dir = {"" = "."}